20090529 Makefile.am,README,compat.h,configure.in,hacking/ChangeLog,man/fuse.1,
         settings.dat,sound.[c|cpp|h],sound/{Blip_Buffer.[cpp|h],Makefile.am},
         tape.c,ui/options.dat,ula.c: switch from libsamplerate to Blip_Buffer
         (by Shay Green) for alias noise reduction for beeper and AY (Fred).
20090530 ui/gtk/gtkui.c: remove unused variable (Fred).
20090530 timer/timer.c: fixes for speed estimation (part of patch in bug
         #2688741) (Gergely Szasz).
20090530 configure.in: try harder to find libpng (Fred).
20090530 ui/gtk/gtkdisplay.c: don't allow double or triple size filters for the
         Timex machines (Fred).
20090530 display.c: fix border colour recorded in display_last_screen so it
         can handle bright borders like in Timex HiRes mode (fixes bug
         #2788244) (Fred).
20090531 ui/widget/options.pl: fix options widget drawing bug in segfault
         protection (Fred).
20090531 configure.in: seem to be trying too hard to find libpng (Fred).
20090605 disk/{beta.[ch]},machines/{spec48.c,tc2048.c},man/fuse.1,
         z80/{coretest.c,z80.c,z80_ops.c}: enable Beta 128 interface in 48K and
         TC2048 machines (thanks, Omikron) (Fred).
20090608 Makefile.am,ay.[ch],fuller.[ch],fuse.c,joystick.[ch],kempmouse.c,
         machines/{spec16.c,spec48.c,tc2048.c},man/fuse.1,periph.[ch],
         settings.dat,sound.cpp,ui/options.dat: add emulation of the Fuller Box
         (feature request #1764994) (Stuart & Fred).
20090608 sound.[cpp|h],sound/{alsasound.c,coreaudiosound.c,sdlsound.c}: allow
         sound to run from 2% speed up (patch #2799477) (Fred).
20090610 Makefile.am,ay.[ch],fuse.c,joystick.[ch],kempmouse.c,
         machines/{spec16.c,spec48.c,tc2048.c},man/fuse.1,melodik.[ch],
         periph.[ch],settings.dat,sound.cpp,ui/options.dat: add emulation of
         the Melodik and similar AY interfaces (feature request #1841501)
         (Fred).
20090611 sound.cpp: correct AY capability check (thanks, Stuary Brady) (Fred).